@@ -88,10 +88,13 @@ while True:
         email = matchedData.group(1)
         matchedData = re.search("contactNumber=(\w+)", fetchData)
         contactNumber = matchedData.group(1)
-        matchedData = re.search("manager=(\w+)", fetchData)
+        matchedData = re.search("manager=([\w+]+)", fetchData)
         manager = matchedData.group(1)
-        matchedData = re.search("description=(\w+)", fetchData)
+        manager = manager.replace("+"," ")
+        matchedData = re.search("description=([\w+]+)", fetchData)
         description = matchedData.group(1)
+        description = description.replace("+"," ")
+        print (description)
         matchedData = re.search("gender=(\w+)", fetchData)
         gender = matchedData.group(1)
     
